--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                                 </ul>
                             </div>
                             <p>{{truncateString(blog.fields.description.stringValue)}}</p>
-                            <a :href="blog.fields.blogurl.stringValue" target="_blank">Read More</a>
+                            <a target="_blank">Read More</a>
                         </div>
                     </div>
                 </div>
