--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   <li><span>NextJs</span></li>
                   <li><span>NodeJs</span></li>
                   <li><span>AngularJs</span></li>
-                  <li><span>PHP</span></li>
+                  <!-- <li><span>PHP</span></li> -->
                 </ul>
               </div>
               <a
