--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                   <li><span>VueJs</span></li>
                   <li><span>NextJs</span></li>
                   <li><span>NodeJs</span></li>
-                  <li><span>AngularJs</span></li>
+                  <!-- <li><span>AngularJs</span></li> -->
                   <!-- <li><span>PHP</span></li> -->
                 </ul>
               </div>
