--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
+          />
     <meta name="google-site-verification" content="wGsIEe4wfS1t_qWHA2jYqqxrodq-YwblzRQFLNQdo68" />
     <!-- Information About Me -->
     <meta name="title" content="Raül Lama Portfolio" />
