--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                   <div class="candidatos">
                     <div class="parcial">
                       <div class="info">
-                        <div class="nome">Python</div>
+                        <div class="nome">React</div>
                         <div class="percentagem-num">70%</div>
                       </div>
                       <div class="progressBar">
