--- a/index.html
+++ b/index.html
@@ -304,16 +304,20 @@
                 data-wow-duration="0.8s"
                 data-wow-delay="0.2s"
               >
-                Raül Lama  is a full-stack blockchain developer
-                with 2+ years of experience in the software
-                development industry.
-                <br /><br />
-                By combining Software Development, writing, and teaching,
-                he demonstrates how to build decentralized applications
-                on EVM-compatible blockchain networks.
-                <br /><br />
-                His stacks include JavaScript, React, Vue, Angular,
-                Node, React Native, NextJs, Solidity, and more.
+                He estado trabajando en el campo del desarrollo de software 
+                por algún tiempo y tengo una alta cantidad de conocimientos 
+                y habilidades en esta área. A día de hoy me encargo de  crear,
+                mantener o mejorar el código de páginas web o aplicaciones. 
+                para un uso más eficientemente y seguro así como también puedo
+                enseñarte o asesorarte sobre la tecnología blockchain y sus 
+                ventajas y posibilidades de implementarlo en tu empresa.
+                Esto puede incluir desde aplicaciones móviles hasta sitios web 
+                y sistemas empresariales.Tengo una buena comprensión de las 
+                herramientas y tecnologías utilizadas en el desarrollo de 
+                software, así como de los procesos y buenas prácticas que se 
+                utilizan para producir software de alta calidad.
+
+             
               </p>
               <div
                 class="mh-about-tag wow fadeInUp"
