--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
                   <li><span>VueJs</span></li>
                   <li><span>NextJs</span></li>
                   <li><span>NodeJs</span></li>
+                  <li><span>Solidity</span></li>
                   <!-- <li><span>AngularJs</span></li> -->
                   <!-- <li><span>PHP</span></li> -->
                 </ul>
