--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                   <div class="candidatos">
                     <div class="parcial">
                       <div class="info">
-                        <div class="nome">HTML</div>
+                        <div class="nome">HTML & CSS</div>
                         <div class="percentagem-num">90%</div>
                       </div>
                       <div class="progressBar">
@@ -443,7 +443,7 @@
                   <div class="candidatos">
                     <div class="parcial">
                       <div class="info">
-                        <div class="nome">CSS</div>
+                        <div class="nome">Solidity</div>
                         <div class="percentagem-num">87%</div>
                       </div>
                       <div class="progressBar">
