--- a/index.html
+++ b/index.html
@@ -304,18 +304,15 @@
                 data-wow-duration="0.8s"
                 data-wow-delay="0.2s"
               >
-                He estado trabajando en el campo del desarrollo de software 
-                por algún tiempo y tengo una alta cantidad de conocimientos 
-                y habilidades en esta área. A día de hoy me encargo de  crear,
-                mantener o mejorar el código de páginas web o aplicaciones. 
-                para un uso más eficientemente y seguro así como también puedo
-                enseñarte o asesorarte sobre la tecnología blockchain y sus 
-                ventajas y posibilidades de implementarlo en tu empresa.
-                Esto puede incluir desde aplicaciones móviles hasta sitios web 
-                y sistemas empresariales.Tengo una buena comprensión de las 
-                herramientas y tecnologías utilizadas en el desarrollo de 
-                software, así como de los procesos y buenas prácticas que se 
-                utilizan para producir software de alta calidad.
+                I have been working in the field of software development for some time and
+                I have a high amount of knowledge and skills in this area. As of today I am 
+                in charge of creating, maintaining or improving the code of websites or 
+                applications. for a more efficient and secure use as well as I can teach or 
+                advise you about blockchain technology and its advantages and possibilities 
+                to implement it in your company. This can include everything from mobile 
+                applications to websites and enterprise systems. I have a good understanding 
+                of the tools and technologies used in software development as well as the
+                processes and best practices used to produce high quality software.
 
              
               </p>
