--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       JavaScript stacks such as React,
       ReactNative, VueJs, and more. Connect with him today!"
     />
-    <meta name="keywords" content="Portfolio, Resume, Experiences" />
+    <meta name="keywords" content="Fullstack, Developer, Blockchain" />
 
     <!-- FAV AND ICONS   -->
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
