--- a/index.html
+++ b/index.html
@@ -78,72 +78,43 @@
        NAVIGATION
     ===================
     -->
-    <header
-      class="
-        black-bg
-        mh-header mh-fixed-nav
-        nav-scroll
-        mh-xs-mobile-nav
-        wow
-        fadeInUp
-      "
-      id="mh-header"
-    >
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <nav class="navbar navbar-expand-lg mh-nav nav-btn">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#mh-home">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#mh-about">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#mh-service">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#mh-skills">Skills</a>
-                </li>
-                <!--
-                <li class="nav-item">
-                  <a class="nav-link" href="#mh-experience">Experiences</a>
-                </li>
-              -->
-                <li v-if="loaded" class="nav-item">
-                  <a class="nav-link" href="#mh-portfolio">Projects</a>
-                </li>
-                <li v-if="loaded" class="nav-item">
-                    <a class="nav-link" href="#mh-blog">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#mh-pricing">Pricing</a>
-                </li>
-                <!--
-                <li v-if="loaded" class="nav-item">
-                    <a class="nav-link" href="#mh-mention">Mention</a>
-                </li>
-              -->
-              </ul>
-            </div>
-          </nav>
-        </div>
+    <header class="black-bg mh-header mh-fixed-nav nav-scroll mh-xs-mobile-nav wow fadeInUp" id="mh-header">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <nav class="navbar navbar-expand-lg mh-nav nav-btn">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#mh-home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#mh-about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#mh-service">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#mh-skills">Skills</a>
+              </li>
+              <li v-if="loaded" class="nav-item">
+                <a class="nav-link" href="#mh-portfolio">Projects</a>
+              </li>
+              <li v-if="loaded" class="nav-item">
+                <a class="nav-link" href="#mh-blog">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#mh-pricing">Pricing</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </header>
+    </div>
+  </header>
 
     <!--
     ===================
