--- a/index.html
+++ b/index.html
@@ -1156,10 +1156,12 @@
         },
       })
     </script>
-<script>
-  document.querySelector('.navbar-toggler').addEventListener('click', function() {
-    document.querySelector('#navbarSupportedContent').classList.toggle('show');
-  });
-</script>
+< <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <!-- Custom JS -->
+    <script>
+      document.querySelector('.navbar-toggler').addEventListener('click', function() {
+        document.querySelector('#navbarSupportedContent').classList.toggle('show');
+      });
   </body>
 </html>
