--- a/index.html
+++ b/index.html
@@ -342,8 +342,7 @@
                         <i class="fa fa-code iron-color"></i>
                         <h3>Software Development</h3>
                         <p>
-                          Do you have a designed UI/UX prototype? At a reasonable cost, I will assist you to translate your ideas from Figma or Adobe XD into a real-world solution.
-                        </p>
+                          Do you have a UI/UX prototype designed? At a reasonable cost, I will help you translate your ideas into a real-world solution.                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 text-center">
