--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 to implement it in your company. This can include everything from mobile 
                 applications to websites and enterprise systems. I have a good understanding 
                 of the tools and technologies used in software development as well as the
-                processes and best practices used to produce high quality software.
+                processes and best practices used to produce high quality software
 
              
               </p>
