--- a/index.html
+++ b/index.html
@@ -281,15 +281,17 @@
                 data-wow-duration="0.8s"
                 data-wow-delay="0.2s"
               >
-                I have been working in the field of software development for some time and
-                I have a high amount of knowledge and skills in this area. As of today I am 
-                in charge of creating, maintaining or improving the code of websites or 
-                applications. for a more efficient and secure use as well as I can teach or 
-                advise you about blockchain technology and its advantages and possibilities 
-                to implement it in your company. This can include everything from mobile 
-                applications to websites and enterprise systems. I have a good understanding 
-                of the tools and technologies used in software development as well as the
-                processes and best practices used to produce high quality software
+                I have been working for some time in the field of software 
+                development and I have a lot of knowledge and skills in this 
+                area. Today I am still training and I am also in charge of 
+                creating, maintaining or improving the code of websites or 
+                applications for a more efficient and secure use and I can also 
+                teach or advise you about blockchain technology and its advantages 
+                and possibilities to implement it in your company. This can 
+                include everything from mobile apps to websites and enterprise 
+                systems. I have a good knowledge of the tools and technologies used 
+                in software development, as well as the processes and best practices 
+                used to produce high quality software.
 
              
               </p>
