--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 data-wow-delay="0.6s"
               >
                 <div class="">
-                  <img src="assets/images/heri.jpg" alt="" class="img-fluid" />
+                  <img src="assets/images/profileIA.png" alt="" class="img-fluid" />
                 </div>
               </div>
             </div>
