--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
                 data-wow-delay="0.6s"
               >
                 <div class="">
-                  <img src="assets/images/profileIA.png" alt="" class="img-fluid" />
-                </div>
+  <img src="assets/images/profileIA.png" alt="Profile Image" class="img-fluid w-50" />
+</div>
+
               </div>
             </div>
           </div>
